fix: bases plugin flicker when scrolling

--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@ Created by Daniel (@danielkhmara) | https://github.com/danielkhmara/obsidian-lum
 
 ---------------------------------------------------------------------------------------
 
-Lumines Obsidian Version: 1.1.0-alpha.14
+Lumines Obsidian Version: 1.1.0-alpha.15
 Support Obsidian Version: 1.0.0+
 
 ---------------------------------------------------------------------------------------
@@ -364,11 +364,11 @@ body {
    --bases-table-header-background: var(--background-primary);
    --bases-table-header-background-hover: none;
    --bases-table-border-color: var(--bases-embed-border-color);
-   --bases-table-row-background-hover: var(--table-row-background-hover);
+   --bases-table-row-background-hover: var(--background-secondary);
    --bases-table-text-size: var(--font-smaller);
    --bases-table-cell-radius-active: 2px;
    --bases-table-cell-shadow-active: 0 0 0 2px var(--interactive-accent);
-   --bases-table-cell-background-active: var(--background-primary);
+   --bases-table-cell-background-active: var(--background-secondary);
    --bases-table-cell-background-disabled: transparent;
    --bases-cards-container-background: transparent;
    --bases-cards-background: var(--background-secondary);
@@ -419,17 +419,18 @@ ul {
 }
 
 /* Section: bases */
-.bases-header .text-button-icon {
-   display: none;
-}
-
+.bases-cards-label,
 .bases-table-header-name {
    font-weight: var(--font-weight-table-titles);
 }
 
-.bases-tbody .bases-tr:nth-child(2n + 1),
-.bases-tbody .bases-tr:hover:nth-child(2n + 1) {
-   background-color: var(--background-secondary);
+.metadata-input-longtext:empty:before {
+   color: var(--text-faint);
+}
+
+.bases-view .bases-td a.internal-link {
+   overflow: hidden;
+   text-overflow: ellipsis;
 }
 
 .bases-view {
